cabal-version:   3.0
name:            aoc2023
version:         0.0
synopsis:        Advent of Code 2023 Solutions
license:         BSD-3-Clause
author:          Bruno da Rocha Paiva
build-type:      Simple

library
  build-depends:    base >= 4 && < 5
  exposed-modules:  Utils, Parser, State
  default-language: Haskell2010

executable day10
  main-is:          Day10.hs
  hs-source-dirs:   .
  build-depends:    base >= 4 && < 5
  other-modules:    Utils, Parser, State
  default-language: Haskell2010
  ghc-options: -main-is Day10

executable day09
  main-is:          Day09.hs
  hs-source-dirs:   .
  build-depends:    base >= 4 && < 5
  other-modules:    Utils, Parser, State
  default-language: Haskell2010
  ghc-options: -main-is Day09

executable day08
  main-is:          Day08.hs
  hs-source-dirs:   .
  build-depends:    base >= 4 && < 5
  other-modules:    Utils, Parser, State
  default-language: Haskell2010
  ghc-options: -main-is Day08

executable day07
  main-is:          Day07.hs
  hs-source-dirs:   .
  build-depends:    base >= 4 && < 5
  other-modules:    Utils, Parser, State
  default-language: Haskell2010
  ghc-options: -main-is Day07

executable day06
  main-is:          Day06.hs
  hs-source-dirs:   .
  build-depends:    base >= 4 && < 5
  other-modules:    Utils, Parser, State
  default-language: Haskell2010
  ghc-options: -main-is Day06

executable day05
  main-is:          Day05.hs
  hs-source-dirs:   .
  build-depends:    base >= 4 && < 5
  other-modules:    Utils, Parser, State
  default-language: Haskell2010
  ghc-options: -main-is Day05

executable day04
  main-is:          Day04.hs
  hs-source-dirs:   .
  build-depends:    base >= 4 && < 5
  other-modules:    Utils, Parser, State
  default-language: Haskell2010
  ghc-options: -main-is Day04

executable day03
  main-is:          Day03.hs
  hs-source-dirs:   .
  build-depends:    base >= 4 && < 5
  other-modules:    Utils, Parser, State
  default-language: Haskell2010
  ghc-options: -main-is Day03

executable day02
  main-is:          Day02.hs
  hs-source-dirs:   .
  build-depends:    base >= 4 && < 5
  other-modules:    Utils, Parser, State
  default-language: Haskell2010
  ghc-options: -main-is Day02

executable day01
  main-is:          Day01.hs
  hs-source-dirs:   .
  build-depends:    base >= 4 && < 5
  other-modules:    Utils, Parser, State
  default-language: Haskell2010
  ghc-options: -main-is Day01
