cabal-version:   3.0
name:            aoc2023
version:         0.0
synopsis:        Advent of Code 2023 Solutions
license:         BSD-3-Clause
author:          Bruno da Rocha Paiva
build-type:      Simple

executable aoc
  main-is:          Main.hs
  hs-source-dirs:   .
  build-depends:    base >= 4.9 && < 4.20,
                    array >= 0.5.6 && < 0.5.7
  other-modules:    Utils, Parser, State,
                    Day01, Day02, Day03,
                    Day04, Day05, Day06,
                    Day07, Day08, Day09,
                    Day10, Day11, Day12,
                    Day13, Day14, Day15,
                    Day16, Day17, Day18,
                    Day19, Day20, Day21,
                    Day22, Day23, Day24,
                    Day25
  default-language: Haskell2010
